--- a/config_pressures-weights-SFRs.ini
+++ b/config_pressures-weights-SFRs.ini
@@ -3,24 +3,24 @@ EXCLUDE_TEMP = 1.e4
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 1.5
 RMAX = 13.
-BEGSNAPNO = 300
-ENDSNAPNO = 313
+BEGSNAPNO = 400
+ENDSNAPNO = 436
 ROOT_DIR = /n/holystore01/LABS/loeb_lab/Users/sjeffreson
 SUBDIR = MW-tracers
 
 [NGC300]
 EXCLUDE_TEMP = 1.e4
-EXCLUDE_AVIR = None
+EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 1.5
 RMAX = 6.
 BEGSNAPNO = 500
-ENDSNAPNO = 799
+ENDSNAPNO = 699
 SUBDIR = NGC300
 ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-vlM]
 EXCLUDE_TEMP = 1.e4
-EXCLUDE_AVIR = None
+EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
@@ -30,7 +30,7 @@ ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-lowM]
 EXCLUDE_TEMP = 1.e4
-EXCLUDE_AVIR = None
+EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
@@ -40,7 +40,7 @@ ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-medM]
 EXCLUDE_TEMP = 1.e4
-EXCLUDE_AVIR = None
+EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
@@ -50,7 +50,7 @@ ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-hiM]
 EXCLUDE_TEMP = 1.e4
-EXCLUDE_AVIR = None
+EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
