Checkpoint, added option to use previously-calculated mid-plane indices to get mid-plane quantities (pressures, counts). Not tested yet.

--- a/config_weights.ini
+++ b/config_weights.ini
@@ -1,6 +1,6 @@
 [MW]
-EXCLUDE_TEMP = 1.e4
-EXCLUDE_AVIR = 2.
+EXCLUDE_TEMP = None
+EXCLUDE_AVIR = None
 TOT_HEIGHT = 1.5
 RMAX = 13.
 BEGSNAPNO = 400
@@ -9,8 +9,8 @@ ROOT_DIR = /n/holystore01/LABS/loeb_lab/Users/sjeffreson
 SUBDIR = MW-tracers
 
 [NGC300]
-EXCLUDE_TEMP = 1.e4
-EXCLUDE_AVIR = 2.
+EXCLUDE_TEMP = None
+EXCLUDE_AVIR = None
 TOT_HEIGHT = 1.5
 RMAX = 6.
 BEGSNAPNO = 500
@@ -19,8 +19,8 @@ SUBDIR = NGC300
 ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-vlM]
-EXCLUDE_TEMP = 1.e4
-EXCLUDE_AVIR = 2.
+EXCLUDE_TEMP = None
+EXCLUDE_AVIR = None
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
@@ -29,8 +29,8 @@ SUBDIR = ETGs/vlM-output
 ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-lowM]
-EXCLUDE_TEMP = 1.e4
-EXCLUDE_AVIR = 2.
+EXCLUDE_TEMP = None
+EXCLUDE_AVIR = None
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
@@ -39,8 +39,8 @@ SUBDIR = ETGs/lowM-output
 ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-medM]
-EXCLUDE_TEMP = 1.e4
-EXCLUDE_AVIR = 2.
+EXCLUDE_TEMP = None
+EXCLUDE_AVIR = None
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
@@ -49,8 +49,8 @@ SUBDIR = ETGs/medM-output
 ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-hiM]
-EXCLUDE_TEMP = 1.e4
-EXCLUDE_AVIR = 2.
+EXCLUDE_TEMP = None
+EXCLUDE_AVIR = None
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
