Consolidated the different Comp scripts into one and shifted differences to config file

--- a/config_pressures-SFRs.ini
+++ b/config_pressures-SFRs.ini
@@ -1,3 +1,7 @@
+[GENERAL]
+PROPS = count, midplane-count, Ptot, Ptherm, Pturb, SigmaSFR
+PROPSSTRING = pressures-SFRs-fixed-mp
+
 [MW]
 EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
