--- a/config_Figs-10-11.ini
+++ b/config_Figs-10-11.ini
@@ -1,10 +1,10 @@
 [GENERAL]
-PROPS = Force, ForceLeft, ForceRight, PtlMinIdcs
-PROPSSTRING = weights
+PROPS = count, midplane-count, midplane-dens, SigmaH2Gas, SigmaGas, Kappa
+PROPSSTRING = Figs-10-11_
 
 [MW]
-EXCLUDE_TEMP = None
-EXCLUDE_AVIR = None
+EXCLUDE_TEMP = 20000.
+EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 1.5
 RMAX = 13.
 BEGSNAPNO = 400
@@ -13,8 +13,8 @@ ROOT_DIR = /n/holystore01/LABS/loeb_lab/Users/sjeffreson
 SUBDIR = MW-tracers
 
 [NGC300]
-EXCLUDE_TEMP = None
-EXCLUDE_AVIR = None
+EXCLUDE_TEMP = 20000.
+EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 1.5
 RMAX = 6.
 BEGSNAPNO = 500
@@ -23,28 +23,28 @@ SUBDIR = NGC300
 ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-vlM]
-EXCLUDE_TEMP = None
-EXCLUDE_AVIR = None
+EXCLUDE_TEMP = 20000.
+EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
-ENDSNAPNO = 400
+ENDSNAPNO = 399
 SUBDIR = ETGs/vlM-output
 ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-lowM]
-EXCLUDE_TEMP = None
-EXCLUDE_AVIR = None
+EXCLUDE_TEMP = 20000.
+EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
-ENDSNAPNO = 400
+ENDSNAPNO = 399
 SUBDIR = ETGs/lowM-output
 ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-medM]
-EXCLUDE_TEMP = None
-EXCLUDE_AVIR = None
+EXCLUDE_TEMP = 20000.
+EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
@@ -53,11 +53,11 @@ SUBDIR = ETGs/medM-output
 ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
 
 [ETG-hiM]
-EXCLUDE_TEMP = None
-EXCLUDE_AVIR = None
+EXCLUDE_TEMP = 20000.
+EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
 BEGSNAPNO = 100
-ENDSNAPNO = 399
+ENDSNAPNO = 174
 SUBDIR = ETGs/hiM-output
 ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
