Small fixes to config files, and allowing for no mid-plane idcs in Comp_PRFMData.py

--- a/Jeffreson+LtU_24b/config/config_gas-denses.ini
+++ b/Jeffreson+LtU_24b/config/config_gas-denses.ini
@@ -1,12 +1,13 @@
 [GENERAL]
 PROPS = count, midplane-count, midplane-dens, SigmaH2Gas, SigmaGas, Kappa
-PROPSSTRING = Figs-10-11_
+PROPSSTRING = gas_denses
 
 [MW]
 EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 1.5
 RMAX = 13.
+MIDPLANEIDCS = True
 BEGSNAPNO = 400
 ENDSNAPNO = 436
 ROOT_DIR = /n/holystore01/LABS/loeb_lab/Users/sjeffreson
@@ -18,6 +19,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 1.5
 RMAX = 6.
+MIDPLANEIDCS = True
 BEGSNAPNO = 500
 ENDSNAPNO = 699
 SUBDIR = NGC300
@@ -29,6 +31,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 399
 SUBDIR = ETGs/vlM-output
@@ -40,6 +43,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 399
 SUBDIR = ETGs/lowM-output
@@ -51,6 +55,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 399
 SUBDIR = ETGs/medM-output
@@ -62,6 +67,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 174
 SUBDIR = ETGs/hiM-output
