--- a/Jeffreson+LtU_24b/config/config_pressures-SFRs.ini
+++ b/Jeffreson+LtU_24b/config/config_pressures-SFRs.ini
@@ -7,8 +7,9 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 1.5
 RMAX = 13.
+MIDPLANEIDCS = True
 BEGSNAPNO = 400
-ENDSNAPNO = 436
+ENDSNAPNO = 600
 ROOT_DIR = /n/holystore01/LABS/loeb_lab/Users/sjeffreson
 SUBDIR = MW-tracers
 
@@ -17,6 +18,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 1.5
 RMAX = 6.
+MIDPLANEIDCS = True
 BEGSNAPNO = 500
 ENDSNAPNO = 699
 SUBDIR = NGC300
@@ -27,6 +29,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 399
 SUBDIR = ETGs/vlM-output
@@ -37,6 +40,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 399
 SUBDIR = ETGs/lowM-output
@@ -47,6 +51,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 399
 SUBDIR = ETGs/medM-output
@@ -57,6 +62,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 174
 SUBDIR = ETGs/hiM-output
