--- a/Jeffreson+LtU_24b/config/config_sigmaeff.ini
+++ b/Jeffreson+LtU_24b/config/config_sigmaeff.ini
@@ -7,6 +7,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 1.5
 RMAX = 13.
+MIDPLANEIDCS = True
 BEGSNAPNO = 400
 ENDSNAPNO = 436
 ROOT_DIR = /n/holystore01/LABS/loeb_lab/Users/sjeffreson
@@ -19,6 +20,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 399
 SUBDIR = ETGs/vlM-output
@@ -31,6 +33,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 399
 SUBDIR = ETGs/lowM-output
@@ -43,6 +46,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 399
 SUBDIR = ETGs/medM-output
@@ -55,6 +59,7 @@ EXCLUDE_TEMP = 20000.
 EXCLUDE_AVIR = 2.
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = True
 BEGSNAPNO = 100
 ENDSNAPNO = 174
 SUBDIR = ETGs/hiM-output
