--- a/Jeffreson+LtU_24b/config/config_weights.ini
+++ b/Jeffreson+LtU_24b/config/config_weights.ini
@@ -7,6 +7,7 @@ EXCLUDE_TEMP = None
 EXCLUDE_AVIR = None
 TOT_HEIGHT = 1.5
 RMAX = 13.
+MIDPLANEIDCS = False
 BEGSNAPNO = 400
 ENDSNAPNO = 436
 ROOT_DIR = /n/holystore01/LABS/itc_lab/Users/sjeffreson
@@ -17,6 +18,7 @@ EXCLUDE_TEMP = None
 EXCLUDE_AVIR = None
 TOT_HEIGHT = 1.5
 RMAX = 6.
+MIDPLANEIDCS = False
 BEGSNAPNO = 500
 ENDSNAPNO = 699
 SUBDIR = NGC300
@@ -27,6 +29,7 @@ EXCLUDE_TEMP = None
 EXCLUDE_AVIR = None
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = False
 BEGSNAPNO = 100
 ENDSNAPNO = 400
 SUBDIR = ETGs/vlM-output
@@ -37,6 +40,7 @@ EXCLUDE_TEMP = None
 EXCLUDE_AVIR = None
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = False
 BEGSNAPNO = 100
 ENDSNAPNO = 400
 SUBDIR = ETGs/lowM-output
@@ -47,6 +51,7 @@ EXCLUDE_TEMP = None
 EXCLUDE_AVIR = None
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = False
 BEGSNAPNO = 100
 ENDSNAPNO = 399
 SUBDIR = ETGs/medM-output
@@ -57,6 +62,7 @@ EXCLUDE_TEMP = None
 EXCLUDE_AVIR = None
 TOT_HEIGHT = 0.3
 RMAX = 2.
+MIDPLANEIDCS = False
 BEGSNAPNO = 100
 ENDSNAPNO = 399
 SUBDIR = ETGs/hiM-output
